--- a/DeviceManager/appsettings.json
+++ b/DeviceManager/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DeviceManager": "Data Source=Database=DeviceContext.Db"
+    "DeviceManager": "Data Source=C:\\SQlite\\DeviceContext.db"
   }
+
 }
