--- a/DeviceManager/appsettings.json
+++ b/DeviceManager/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DeviceManager": "Data Source=C:\\SQlite\\DeviceContext.db"
+    "DeviceManager": "Data Source=DeviceContext.db"
   }
 
 }
