--- a/DeviceManager/appsettings.json
+++ b/DeviceManager/appsettings.json
@@ -8,6 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DeviceManager": "Data Source=DeviceContext.db"
+  },
+
+  "AdminOverride": {
+    "Enabled": "false"
   }
 
 }
