--- a/DeviceManager/appsettings.json
+++ b/DeviceManager/appsettings.json
@@ -12,6 +12,14 @@
 
   "AdminOverride": {
     "Enabled": "false"
-  }
+  },
 
+  
+    "Email": {
+      "SmtpHost": "smtp.gmail.com",
+      "SmtpPort": "587",
+      "Username": "your-email@gmail.com",
+      "Password": "your-app-password-here",
+      "FromEmail": "noreply@devicemanager.com"
+    }
 }
